...
                textInputAction: TextInputAction.search,
              ),
              const SizedBox(height: 16),
              const TabBar(
                tabs: <Widget>[
                  Tab(
                    child: Text(key: Key('tab-movies'), "Movies"),
                  ),
                  Tab(
                    child: Text("TV Series"),
                  ),
                ],
              ),
              Expanded(
                child: TabBarView(
                  children: <Widget>[
...
