...
                              'Seasons & Episodes',
                              style: kHeading6,
                            ),
                            SizedBox(
                              height: 150,
                              child: ListView.builder(
                                key: const Key('listview-season'),
                                scrollDirection: Axis.horizontal,
                                itemBuilder: (context, index) {
                                  final season = tvSeriesDetail.seasons[index];
                                  return Padding(
                                    padding: const EdgeInsets.all(4.0),
                                    child: InkWell(
...
                                  );
                                } else if (state is TvSeriesEpisodeHasData) {
                                  if (state.tvSeriesEpisode.isNotEmpty) {
                                    return SizedBox(
                                      height: 150,
                                      child: ListView.builder(
                                        key: const Key('episode-listview'),
                                        scrollDirection: Axis.horizontal,
                                        itemBuilder: (context, index) {
                                          final episode =
                                              state.tvSeriesEpisode[index];
                                          return Padding(
                                            padding: const EdgeInsets.all(4.0),
...
